Bug 1900681 - Worker XHR self-manages XHRMT lifecycle. r=dom-worker-reviewers,smaug

We don't want the XHRMT to self-Abort() when the XHRWT state machine
is built assuming this doesn't happen.  This is likely the source of a
number of weird hangs and crashes we have hardened the implementation
against in the past, and potentially still some ongoing hangs and
weirdness.

Differential Revision: https://phabricator.services.mozilla.com/D212609